ダイレクト　作成

--- a/src/app/admin/page/direct-page/direct-page.component.html
+++ b/src/app/admin/page/direct-page/direct-page.component.html
@@ -41,5 +41,13 @@
   </p>
 </div>
 
-<app-direct log>
-</app-direct>
+<app-direct1 log>
+</app-direct1>
+
+<app-direct2 log>
+
+</app-direct2>
+
+<app-direct3 log>
+
+</app-direct3>
